--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <!--test-->
                 <div class="form-floating">
                     <select id="address1" name="address1" class="form-control p-region-id w-100 mx-auto">
-                        <label for="postnumber">
+                        <label for="address1">
                             <font size="-1" color="gray">都道府県</font>
                             <font size="-2" color="violet">手動選択も可能</font>
                         </label>
