--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="form-floating">
                     <select id="address1" name="address1" class="form-select p-region-id w-100 mx-auto">
                        
-                        <option value=""></option>                
+                        <option selected>--</option>                
                     <option value="1">北海道</option>
                     <option value="2">青森県</option>
                 <option value="3">岩手県</option>
