--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             
                 <!--test-->
                 <div class="form-floating">
-                    <select id="address1" name="address1" class="form-select p-region-id w-100 mx-auto">
+                    <select id="address1" name="address1" class="form-select p-region-id w-100 mx-auto" required>
                        
                         <option selected></option>                
                     <option value="1">北海道</option>
@@ -246,7 +246,7 @@
 
                 <!--test-->
                 <div class="form-floating">
-                    <input class="form-control p-locality w-100 mx-auto" id="address2" name="address2" type="text" placeholder="xxx">
+                    <input class="form-control p-locality w-100 mx-auto" id="address2" name="address2" type="text" placeholder="xxx" required>
                     <label for="address2">
                         <font size="-1" color="gray">市区町村</font>
                         <font size="-2" color="violet">手動での入力可能</font>
