--- a/index.html
+++ b/index.html
@@ -433,10 +433,12 @@
             <p class="w-100 mx-3">今回ご使用量(㎥)</p>
             <input class="form-control w-75 mx-auto" id="quantity" name="quantity" type="number" maxlength="10" placeholder="00000">
             <div class="invalid-feedback">必須入力です。</div>
-            <br>
+<!--test中のため一時停止-->  
+
+                <br>
             <p class="w-100 mx-3">ガス料金単価(円)</p>
-            <p class="w-75 mx-auto" id="unitprice" name="unitprice" value="0"></p>
-<!--test中のため一時停止-->            
+            <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" value="0"></p>
+          
 
                 <br>
 
