--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
                 <br>
             <p class="w-100 mx-3">ガス料金単価(円)</p>
-            <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" value="0"></p>
+            <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" type="number" value="0"></p>
           
 
                 <br>
