--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
 
-                <!--選択項目次第で入力項目を動的にするテスト開始1-->
+                <!--選択項目次第で入力項目を動的にするテスト開始1--
 
                 <select id="ex_age_b" class="form-control mx-auto">
                     <option value="default">選択して下さい</option>
