--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             </font>
         </div>
         <div class="h-adr" style="background-color: #eee;">    
-            <p class="w-100 mx-3"><font size="+2">現在お住まいの地域</font><font size="-2" color="violet"> *郵便番号を入力すると住所が自動入力されます。</font></p>
+            <p class="w-100 mx-3">
+                <font size="+2">現在お住まいの地域</font>
+                <br>
+                <font size="-2" color="violet"> *郵便番号を入力すると住所が自動入力されます。</font>
+            </p>
             <div class="w-75 mx-auto">
                 <span class="form-control p-country-name mx-3 w-25 mt-3" style="display:none;">Japan</span>            
                 
