--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             
             <!--test-->
             <div class="form-floating">
-                <input class="form-control form-control-lg" id="billingamount" name="entry.642272830" type="number" maxlength="10" placeholder="00000円">
+                <input class="form-control form-control-lg" id="billingamount" name="entry.642272830" type="number" maxlength="10" placeholder="00000円" required>
                 <label for="billingamount">
                     <font size="-1" color="gray">ご請求予定金額</font>
                     <font size="-2" color="gray">(円)を入力</font>
@@ -416,7 +416,7 @@
             </div>
             <br>
             <div class="form-floating">
-                <input class="form-control form-control-lg" id="quantity" name="entry.1113780615" type="number" maxlength="10" placeholder="00000円">
+                <input class="form-control form-control-lg" id="quantity" name="entry.1113780615" type="number" maxlength="10" placeholder="00000円" required>
                 <label for="quantity">
                     <font size="-1" color="gray">今回ご使用量</font>
                     <font size="-2" color="gray">(㎥)を入力</font>
