--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     お手元にガスの料金表(検針票)をご用意ください。
                 </font>
         </div>
+        <img src="self_check.jpg" alt="料金診断" title="料金診断">
         <div class="alert alert-warning" role="alert">
             <font size="-1">
                 【STEP2】<br>
