--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                     お手元にガスの料金表(検針票)をご用意ください。
                 </font>
         </div>
+        <p class="w-100 mx-3">
+            <font size="+2">サンプル</font>
+            <br>
+            <font size="-2" color="violet"> *以下の例の場合、ご請求予定金額:23029円、基本料金:1620円、今回ご使用量：33.6㎥となる。</font>
+        </p>
         <img src="self_check.jpg" alt="料金診断" title="料金診断">
         <div class="alert alert-warning" role="alert">
             <font size="-1">
