--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <font size="-2" color="violet"> *以下の例の場合、ご請求予定金額:23029円、基本料金:1620円、今回ご使用量：33.6㎥となる。</font>
         </p>
-        <img src="self_check.jpg" alt="料金診断" title="料金診断">
+        <img class="mx-auto" src="self_check.jpg" alt="料金診断" title="料金診断">
         <div class="alert alert-warning" role="alert">
             <font size="-1">
                 【STEP2】<br>
