--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <br>
             <font size="-2" color="violet"> *以下の例の場合、ご請求予定金額:23029円、基本料金:1620円、今回ご使用量：33.6㎥となる。</font>
         </p>
-        <img class="mx-auto" src="self_check.jpg" alt="料金診断サンプル" title="料金診断サンプル">
+        <div class="col-4">
+            <img class="img-fluid" src="self_check.jpg" alt="料金診断サンプル" title="料金診断サンプル">
+        </div>
         <div class="alert alert-warning" role="alert">
             <font size="-1">
                 【STEP2】<br>
