--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <body>
     <form name="googleform1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdiEkQbMJv60pNkicOLpU6QNorjG0VO1mY6yFnZ8sgdWJ7P7A/formResponse" method="POST"  enctype="application/x-www-form-urlencoded" id="mG61Hd" target="hidden_iframe" onsubmit="submitted=true;">
 <!---------------------------------------------------------------------------------->
+        <div style="background-color: #eee;">
+<!---------------------------------------------------------------------------------------------------------------->
+            <div class="w-75 mx-auto">           
+<!---------------------------------------------------------------------------------------------------------------->        
         <br>
 <!---------------------------------------------------------------------------------->        
         <div class="alert alert-warning" role="alert">
@@ -220,9 +224,13 @@
 <!---------------------------------------------------------------------------------->
 <!--            </div>    -->
 <!---------------------------------------------------------------------------------->
-        </div>
+                </div>
 <!---------------------------------------------------------------------------------->
-        <input type="submit" class="mt-4 btn btn-primary btn-block" value="料金診断結果を見る">
+                <input type="submit" class="mt-4 btn btn-primary btn-block" value="料金診断結果を見る">
+<!---------------------------------------------------------------------------------->
+            </div>        
+<!---------------------------------------------------------------------------------->
+        </div>
 <!---------------------------------------------------------------------------------->
     </form>
     
