--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <!---------------------------------------------------------------------------------->
                 </div>
 <!---------------------------------------------------------------------------------->
-                <input type="submit" class="mt-4 btn btn-primary btn-block" value="料金診断結果を見る">
+                <input type="submit" class="mt-4 btn-lg btn-primary btn-block" value="料金診断結果を見る">
 <!---------------------------------------------------------------------------------->
                 <br>
 <!---------------------------------------------------------------------------------->
