--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <div class="form-floating">
                     <input class="form-control p-postal-code w-100 mx-auto" id="postnumber" name="entry.1592950719" type="number" maxlength="7" placeholder="0000000">
                     <label for="postnumber">
-                        <font size="-1" color="gray">郵便番号</font>
-                        <font size="-2" color="gray">ハイフンなしの数字7桁</font>
+                        <font size="-1" color="#202020">郵便番号</font>
+                        <font size="-2" color="dimgray">ハイフンなしの数字7桁</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
                     <div class="invalid-feedback">Required.</div>
