--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <option value="47">沖縄県</option>
                     </select>
                     <label for="address1">
-                        <font size="-1" color="gray">都道府県</font>
+                        <font size="-1" color="#202020">都道府県</font>
                         <font size="-2" color="violet">必須。手動選択可</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
@@ -141,7 +141,7 @@
                 <div class="form-floating">
                     <input class="form-control p-locality w-100 mx-auto" id="address2" name="entry.1656297817" type="text" placeholder="xxx" required>
                     <label for="address2">
-                        <font size="-1" color="gray">市区町村</font>
+                        <font size="-1" color="#202020">市区町村</font>
                         <font size="-2" color="violet">必須。手動入力可</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
@@ -153,8 +153,8 @@
                 <div class="form-floating">
                     <input class="form-control p-street-address p-extended-address  w-100 mx-auto" id="address3" name="entry.33302498" type="text" placeholder="xxx">
                     <label for="address3">
-                        <font size="-1" color="gray">町・番地</font>
-                        <font size="-2" color="gray">手動入力可</font>
+                        <font size="-1" color="#202020">町・番地</font>
+                        <font size="-2" color="dimgray">手動入力可</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
                     <div class="invalid-feedback">Required.</div>
@@ -184,7 +184,7 @@
                 <div class="form-floating">
                     <input class="form-control form-control-lg" id="billingamount" name="entry.642272830" type="number" maxlength="10" placeholder="00000円" required>
                     <label for="billingamount">
-                        <font size="-1" color="gray">ご請求予定金額</font>
+                        <font size="-1" color="#202020">ご請求予定金額</font>
                         <font size="-2" color="violet">必須</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
@@ -196,8 +196,8 @@
                 <div class="form-floating">
                     <input class="form-control form-control-lg" id="basiccharge" name="entry.299805872" type="number" maxlength="10" placeholder="00000円">
                     <label for="basiccharge">
-                        <font size="-1" color="gray">基本料金(円)</font>
-                        <font size="-2" color="gray">不明の際は1650と入力</font>
+                        <font size="-1" color="#202020">基本料金(円)</font>
+                        <font size="-2" color="dimgray">不明の際は1650と入力</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
                     <div class="invalid-feedback">Required.</div>
@@ -208,7 +208,7 @@
                 <div class="form-floating">
                     <input class="form-control form-control-lg" id="quantity" name="entry.1113780615" type="number" maxlength="10" placeholder="00000円" required>
                     <label for="quantity">
-                        <font size="-1" color="gray">今回ご使用量(㎥)</font>
+                        <font size="-1" color="#202020">今回ご使用量(㎥)</font>
                         <font size="-2" color="violet">必須</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
