--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <input class="form-control form-control-lg" id="basiccharge" name="entry.299805872" type="number" maxlength="10" placeholder="00000円">
                     <label for="basiccharge">
                         <font size="-1" color="#202020">基本料金(円)</font>
-                        <font size="-2" color="dimgray">不明の際は1650と入力</font>
+                        <font size="-2" color="dimgray">*ご不明の際は一般価格1650円と入力</font>
                     </label>
                     <div class="valid-feedback">Good!</div>
                     <div class="invalid-feedback">Required.</div>
