--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <!---------------------------------------------------------------------------------->
                     <br>
 <!---------------------------------------------------------------------------------->                
+                    <p class="w-100">都道府県 <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
                         <select id="address1" name="entry.1674993749" class="form-select p-region-id w-100 mx-auto" required>                       
                             <option selected></option>                
@@ -127,8 +128,8 @@
                             <option value="47">沖縄県</option>
                         </select>
                         <label for="address1">                        
-                            <font size="-1" color="#202020">都道府県</font>                        
-                            <font size="-2" color="violet">必須。手動選択可</font>
+<!--                            <font size="-1" color="#202020">都道府県</font>                        -->
+                            <font size="-2" color="violet">選択してください。手動選択可</font>
                         </label>                    
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
