--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                             <option value="47">沖縄県</option>
                         </select>
                         <label for="address1">                        
-<!--                            <font size="-1" color="#202020">都道府県</font>                        -->
-                            <font size="-2" color="violet">選択してください。手動選択可</font>
+                            <font size="-1" color="#202020">選択してください。手動選択可</font>
+<!--                            <font size="-2" color="violet">選択してください。手動選択可</font>-->
                         </label>                    
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
