--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
                         <font size="-2" color="violet"> *郵便番号を入力すると住所が自動入力されます。</font>
                     </p>
 <!---------------------------------------------------------------------------------->                
+                    <p class="w-100">郵便番号 <span class="badge bg-secondary">任意</span></p>
                     <span class="form-control p-country-name mx-3 w-25 mt-3" style="display:none;">Japan</span>                
                     <div class="form-floating">
                         <input class="form-control p-postal-code w-100 mx-auto" id="postnumber" name="entry.1592950719" type="number" maxlength="7" placeholder="0000000">
                         <label for="postnumber">                       
-                            <font size="-1" color="#202020">郵便番号</font>                        
+<!--                            <font size="-1" color="#202020">郵便番号</font>                        -->
                             <font size="-2" color="dimgray">ハイフンなしの数字7桁</font>
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -128,7 +129,7 @@
                             <option value="47">沖縄県</option>
                         </select>
                         <label for="address1">                        
-                            <font size="-1" color="#202020">選択してください。手動選択可</font>
+                            <font size="-1" color="#202020">選択してください（手動選択可）</font>
 <!--                            <font size="-2" color="violet">選択してください。手動選択可</font>-->
                         </label>                    
                         <div class="valid-feedback">Good!</div>
@@ -137,11 +138,12 @@
 <!---------------------------------------------------------------------------------->
                     <br>
 <!---------------------------------------------------------------------------------->                
+                    <p class="w-100">市区町村 <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
                         <input class="form-control p-locality w-100 mx-auto" id="address2" name="entry.1656297817" type="text" placeholder="xxx" required>
                         <label for="address2">
-                            <font size="-1" color="#202020">市区町村</font>
-                            <font size="-2" color="violet">必須。手動入力可</font>
+                            <font size="-1" color="#202020">入力してください（手動入力可）</font>
+<!--                            <font size="-2" color="violet">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
@@ -149,11 +151,12 @@
 <!---------------------------------------------------------------------------------->
                     <br>
 <!---------------------------------------------------------------------------------->
+                    <p class="w-100">町・番地 <span class="badge bg-secondary">任意</span></p>
                     <div class="form-floating">
                         <input class="form-control p-street-address p-extended-address  w-100 mx-auto" id="address3" name="entry.33302498" type="text" placeholder="xxx">
                         <label for="address3">
                             <font size="-1" color="#202020">町・番地</font>
-                            <font size="-2" color="dimgray">手動入力可</font>
+<!--                            <font size="-2" color="dimgray">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
