--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="form-floating">
                         <input class="form-control p-locality w-100 mx-auto" id="address2" name="entry.1656297817" type="text" placeholder="xxx" required>
                         <label for="address2">
-                            <font size="-1" color="#202020">入力してください（手動入力可）</font>
+                            <font size="-1" color="#202020">自動入力されます（手動入力も可）</font>
 <!--                            <font size="-2" color="violet">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -155,7 +155,7 @@
                     <div class="form-floating">
                         <input class="form-control p-street-address p-extended-address  w-100 mx-auto" id="address3" name="entry.33302498" type="text" placeholder="xxx">
                         <label for="address3">
-                            <font size="-1" color="#202020">町・番地</font>
+                            <font size="-1" color="#202020">自動入力されます（手動入力も可）</font>
 <!--                            <font size="-2" color="dimgray">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -179,11 +179,12 @@
 <!---------------------------------------------------------------------------------->
                     <p class="w-100 mx-3"><font size="+2">現在のガス料金情報</font></p>
 <!---------------------------------------------------------------------------------->            
+                    <p class="w-100">ご請求予定金額(円) <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="billingamount" name="entry.642272830" type="number" maxlength="10" placeholder="00000円" required>
                         <label for="billingamount">
-                            <font size="-1" color="#202020">ご請求予定金額</font>
-                            <font size="-2" color="violet">必須</font>
+                            <font size="-1" color="#202020">入力して下さい</font>
+<!--                            <font size="-2" color="violet">必須</font> -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
@@ -191,11 +192,12 @@
 <!---------------------------------------------------------------------------------->
                     <br>
 <!---------------------------------------------------------------------------------->
+                    <p class="w-100">基本料金(円) <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="basiccharge" name="entry.299805872" type="number" maxlength="10" placeholder="00000円">
                         <label for="basiccharge">
-                            <font size="-1" color="#202020">基本料金(円)</font>
-                            <font size="-2" color="dimgray">*ご不明の際は一般価格1650円と入力</font>
+                            <font size="-1" color="#202020">入力して下さい</font>
+<!--                            <font size="-2" color="dimgray">*ご不明の際は一般価格1650円と入力</font> -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
@@ -203,11 +205,12 @@
 <!---------------------------------------------------------------------------------->
                     <br>
 <!---------------------------------------------------------------------------------->
+                    <p class="w-100">今回ご使用量(㎥) <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="quantity" name="entry.1113780615" type="number" maxlength="10" placeholder="00000円" required>
                         <label for="quantity">
-                            <font size="-1" color="#202020">今回ご使用量(㎥)</font>
-                            <font size="-2" color="violet">必須</font>
+                            <font size="-1" color="#202020">入力して下さい</font>
+<!--                            <font size="-2" color="violet">必須</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
