--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <div class="form-floating">
                         <input class="form-control p-postal-code w-100 mx-auto" id="postnumber" name="entry.1592950719" type="number" maxlength="7" placeholder="0000000">
                         <label for="postnumber">                       
-<!--                            <font size="-1" color="#202020">郵便番号</font>                        -->
-                            <font size="-2" color="dimgray">ハイフンなしの数字7桁</font>
+                           <font size="-1" color="dimgray">ハイフンなしの数字7桁</font>
+<!--                             <font size="-2" color="dimgray">ハイフンなしの数字7桁</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
@@ -129,7 +129,7 @@
                             <option value="47">沖縄県</option>
                         </select>
                         <label for="address1">                        
-                            <font size="-1" color="#202020">選択してください（手動選択可）</font>
+                            <font size="-1" color="dimgray">選択してください（手動選択可）</font>
 <!--                            <font size="-2" color="violet">選択してください。手動選択可</font>-->
                         </label>                    
                         <div class="valid-feedback">Good!</div>
@@ -142,7 +142,7 @@
                     <div class="form-floating">
                         <input class="form-control p-locality w-100 mx-auto" id="address2" name="entry.1656297817" type="text" placeholder="xxx" required>
                         <label for="address2">
-                            <font size="-1" color="#202020">自動入力されます（手動入力も可）</font>
+                            <font size="-1" color="dimgray">自動入力されます（手動入力も可）</font>
 <!--                            <font size="-2" color="violet">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -155,7 +155,7 @@
                     <div class="form-floating">
                         <input class="form-control p-street-address p-extended-address  w-100 mx-auto" id="address3" name="entry.33302498" type="text" placeholder="xxx">
                         <label for="address3">
-                            <font size="-1" color="#202020">自動入力されます（手動入力も可）</font>
+                            <font size="-1" color="dimgray">自動入力されます（手動入力も可）</font>
 <!--                            <font size="-2" color="dimgray">手動入力可</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -183,7 +183,7 @@
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="billingamount" name="entry.642272830" type="number" maxlength="10" placeholder="00000円" required>
                         <label for="billingamount">
-                            <font size="-1" color="#202020">入力して下さい</font>
+                            <font size="-1" color="dimgray">入力して下さい</font>
 <!--                            <font size="-2" color="violet">必須</font> -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -196,7 +196,7 @@
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="basiccharge" name="entry.299805872" type="number" maxlength="10" placeholder="00000円">
                         <label for="basiccharge">
-                            <font size="-1" color="#202020">入力して下さい</font>
+                            <font size="-1" color="dimgray">入力して下さい</font>
 <!--                            <font size="-2" color="dimgray">*ご不明の際は一般価格1650円と入力</font> -->
                         </label>
                         <div class="valid-feedback">Good!</div>
@@ -209,7 +209,7 @@
                     <div class="form-floating">
                         <input class="form-control form-control-lg" id="quantity" name="entry.1113780615" type="number" maxlength="10" placeholder="00000円" required>
                         <label for="quantity">
-                            <font size="-1" color="#202020">入力して下さい</font>
+                            <font size="-1" color="dimgray">入力して下さい</font>
 <!--                            <font size="-2" color="violet">必須</font>  -->
                         </label>
                         <div class="valid-feedback">Good!</div>
