--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <option value="47">沖縄県</option>
                         </select>
                         <label for="address1">                        
-                            <font size="-1" color="dimgray">選択してください（手動選択可）</font>
+                            <font size="-1" color="dimgray">自動入力されます（手動選択も可）</font>
 <!--                            <font size="-2" color="violet">選択してください。手動選択可</font>-->
                         </label>                    
                         <div class="valid-feedback">Good!</div>
