--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <font size="-2" color="violet"> *郵便番号を入力すると住所が自動入力されます。</font>
                     </p>
 <!---------------------------------------------------------------------------------->                
-                    <p class="w-100">郵便番号 <span class="badge bg-secondary">任意</span></p>
+                    <p class="w-100">郵便番号 <span class="badge bg-danger">必須</span></p>
                     <span class="form-control p-country-name mx-3 w-25 mt-3" style="display:none;">Japan</span>                
                     <div class="form-floating">
                         <input class="form-control p-postal-code w-100 mx-auto" id="postnumber" name="entry.1592950719" type="number" maxlength="7" placeholder="0000000">
