--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <!---------------------------------------------------------------------------------->
                 <div class="calculation" style="background-color: #eee;">
 <!---------------------------------------------------------------------------------->
-                    <p class="w-100 mx-3"><font size="+2">現在のガス料金情報</font></p>
+                    <p class="w-100"><font size="+2">現在のガス料金情報</font></p>
 <!---------------------------------------------------------------------------------->            
                     <p class="w-100">ご請求予定金額(円) <span class="badge bg-danger">必須</span></p>
                     <div class="form-floating">
