--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="w-100 mx-3">
                     <font size="+2">サンプル</font>
                     <br>
-                    <font size="-2" color="violet"> *以下の例の場合、ご請求予定金額:23029円、基本料金:1620円、今回ご使用量：33.6㎥となる。</font>
+                    <font size="-2" color="dimgray"> *以下の例の場合、ご請求予定金額:23029円、基本料金:1620円、今回ご使用量：33.6㎥となる。</font>
                 </p>
 <!---------------------------------------------------------------------------------->
                 <div>
