--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <!---------------------------------------------------------------------------------->
                 <div class="h-adr" style="background-color: #eee;">    
 <!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+                    <p class="w-100"><font size="+2">住所情報</font></p>
 <!---------------------------------------------------------------------------------->                
                     <p class="w-100">郵便番号 <span class="badge bg-danger">必須</span></p>
                     <span class="form-control p-country-name mx-3 w-25 mt-3" style="display:none;">Japan</span>                
