--- a/index.html
+++ b/index.html
@@ -210,9 +210,17 @@
 <!---------------------------------------------------------------------------------->                
                     <br>
 <!---------------------------------------------------------------------------------->
-                    <p class="w-100 mx-3">ガス料金単価(円)</p>
-                    <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" type="number" value="0"></p>
+<!--                    <p class="w-100 mx-3">ガス料金単価(円)</p>
+<!--                    <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" type="number" value="0"></p>
 <!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->                
+                <div class="shadow-sm" id="result_zone" style="display:none; background-color: #afeeee;">
+                    <p class="w-100 mx-2">ガス料金単価(円)</p>                 
+                    <font size="+2">                     
+                        <p class="w-75 mx-auto" id="unitprice" name="entry.1056785657" type="number" value="0"></p>                     
+                    </font>
+                </div>
+<!---------------------------------------------------------------------------------->                
                     <br>
 <!---------------------------------------------------------------------------------->
                 </div>
