--- a/index.html
+++ b/index.html
@@ -155,8 +155,24 @@
                         </label>
                         <div class="valid-feedback">Good!</div>
                         <div class="invalid-feedback">Required.</div>
-                    </div>
+                    </div>                
 <!---------------------------------------------------------------------------------->
+                    <br>
+<!---------------------------------------------------------------------------------------------------------------->                                
+                    <p class="w-100">現在お住まいの住居種類 <span class="badge bg-danger">必須</span></p>
+                    <div class="form-floating mx-auto">                                               
+                        <select id="house" class="form-select mx-auto" name="entry.2013057432" required>                                                       
+                            <option selected></option>                                                            
+                            <option value="一戸建て_持ち家">一戸建て（持ち家）</option>                                                            
+                            <option value="一戸建て_借家">一戸建て（借家）</option>                        
+                            <option value="集合住宅_アパート・マンション">集合住宅（アパート・マンション）</option>                                                
+                            <option value="その他">その他</option>                        
+                        </select>                
+                        <label for="house">                                            
+                            <font size="-1" color="dimgray">選択して下さい</font>                
+                        </label>
+                    </div>
+<!---------------------------------------------------------------------------------------------------------------->  
                     <br>                
 <!---------------------------------------------------------------------------------->            
                 </div>
