--- a/thanks.html
+++ b/thanks.html
@@ -23,12 +23,19 @@
 
   <body>
     <form name="thanksform">
-       <div class="p-1 mb-1 bg-primary bg-gradient text-white bg-opacity-50 mx-auto">
+       <div class="w-75 mx-auto">
+<!--         <div class="p-1 mb-1 bg-primary bg-gradient text-white bg-opacity-50 mx-auto"> -->
 
-         <p class="display-6 mx-auto w-75">診断結果はLINEチャット画面に表示されます。<br><br>画面をとじて下さい。</p>
+<!--         <p class="display-6 mx-auto w-75">診断結果はLINEチャット画面に表示されます。<br><br>画面をとじて下さい。</p>  -->
+         <p class="mx-auto">料金診断をご利用いただきありがとうございます。<br>診断結果はLINEチャット画面に表示されます。<br><br>下記ボタンより画面をとじて下さい。</p>
+
          <br>
-         <button type="submit" class="btn btn-secondary d-flex justify-content-center">画面をとじる</button>
-
+         <!-- <button type="submit" class="btn btn-secondary d-flex justify-content-center">画面をとじる</button>  -->
+         <!-- <button type="submit" class="btn btn-lg btn-primary btn-block">画面をとじる</button>  -->
+         <button type="submit" class="btn btn-lg btn-primary btn-block">画面をとじる</button>
+      </div>
+    </form>         
+         
          <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -36,7 +43,6 @@
          <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
          <script src="thanks.js"></script>
          <script src="liff.js"></script>
-      </div>
-    </form>
+
   </body>
 </html>
