--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                     <div class="form-floating mx-auto">                                               
                         <select id="house" class="form-select mx-auto" name="entry.2013057432" required>                                                       
                             <option selected></option>                                                            
-                            <option value="1">一戸建て（持ち家）</option>                                                            
-                            <option value="2">一戸建て（借家）</option>                        
-                            <option value="3">集合住宅（アパート・マンション）</option>                                                
-                            <option value="4">その他</option>                        
+                            <option value="一戸建て_持ち家">一戸建て（持ち家）</option>                                                            
+                            <option value="一戸建て_借家">一戸建て（借家）</option>                        
+                            <option value="集合住宅_アパート・マンション">集合住宅（アパート・マンション）</option>                                                
+                            <option value="その他">その他</option>                        
                         </select>                
                         <label for="house">                                            
                             <font size="-1" color="dimgray">選択して下さい</font>                
