--- a/thanks.html
+++ b/thanks.html
@@ -27,7 +27,7 @@
 <!--         <div class="p-1 mb-1 bg-primary bg-gradient text-white bg-opacity-50 mx-auto"> -->
 
 <!--         <p class="display-6 mx-auto w-75">診断結果はLINEチャット画面に表示されます。<br><br>画面をとじて下さい。</p>  -->
-         <p class="mx-auto">料金診断をご利用いただきありがとうございます。<br>診断結果はLINEチャット画面に表示されます。<br><br>下記ボタンより画面をとじて下さい。</p>
+         <p class="mx-auto">料金診断をご利用いただきありがとうございます。<br><br>診断結果はLINEチャット画面に表示されます。<br><br>下記ボタンより画面をとじて下さい。</p>
 
          <br>
          <!-- <button type="submit" class="btn btn-secondary d-flex justify-content-center">画面をとじる</button>  -->
